fix padding on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12923,10 +12923,15 @@ footer p {
 }
 .content-background {
   background-color: #ffffff;
-  margin: 0 10px;
   padding-top: 80px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+@media (min-width: 768px) {
+  .content-background {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
 .subheading-color {
   color: #bfbfbf;
